--- a/19.md
+++ b/19.md
@@ -2,10 +2,19 @@
 
 大家好，下午好，早上好，今天我们继续谈论爱情，讲之前先说一下，一位叫Nadia的同学，你的钥匙链落在这教室了，就在我这里，课后请来我这里取。
 
-那我们来讲讲爱情吧。上节课我们留下的问题多过答案，问题是...很难的问题，“我们怎样维持爱情，怎样在热恋期后维持激情？”因为即使我们觅得自己的布拉德·皮特，或哈莉·贝瑞也不能确保激情长存，其实真正能确定的是，我们和那个人历经的生理上的兴奋会慢慢淡去，这在一定程度上解释就几个数据，三分之二的婚姻以离婚告终，那些即便以后没有分开也是出于省事，出于责任，而不是因为曾经在一起时的那种激情，那种在恋情一开始时存在的带着想要与之共度终生的彼此承诺与对方长相厮守的美好夙愿。若问“幸福心理学能为我们做什么？”这是对另一个问题的提问，另一个被问了很多年的问题。“为什么这么多恋情失败的例子？”这问题很重要，很有必要问，这个问题涵盖面远远不够吗，但这个问题犯了一个错误，他有一个缺点，只问了消极的问题，当我们研究问题少年，时间管理与压力时也犯了这样的错误，因为当我们只问了消极的问题时，我们就会看不到巴士上的孩子。这是一个比喻，我们就会看不到眼前真实的颜色，如果我们仅关注一个问题“一共有多少几何形状？”问题决定现实，很多时候，如果我们不问某个问题，某些答案就不会出来，所以我们来问这个问题，不仅问“怎样让恋情为维系下去”还要问“怎样让恋情美好下去”。如David Schnarch和John Gottman两位心理学家，在他们写的大作中，在他们的研究中，谈过这些方法特征，让我们来了解一下。  
-第一个方法是努力，努力世界上守得最好的秘诀，是成功的秘诀，是个人成功的秘诀，是感情成功的秘诀，成功没有捷径，若想让一段恋情一直美好，我们就得为之努力。这看起来似乎是不言而明的普遍常识，但在这个班上，我们经常体会到正如伏尔泰所说“常识没那么寻常”为什么要用常识来维持一段恋情时？却发现这样的常识不是人人都有。这是因为很多人对恋情有着错误的期望，或者确切的说，对美好的恋情有着错误的期望，大多数人认为拥有一段美好的至死不渝的恋情的关键在于寻找到真命天子，这确实重要，但是错在了将重点放在寻找上面。我们也套用一下Carol Dweck研究中的固定心态和可塑心态的对比，人们有一种会破坏恋情的寻找心态，我来为大家解释一下。先回到春假前我们讲过的知识，Carol Dweck证明了当人们获得游戏测试成绩后，我们赞赏他们“你真聪明”这时他们就有了固定心态。相反，如果我们称赞他们“你真努力”他们就有了可塑心态，这两种心态都会产生影响。因为固定心态既赞赏“你真聪明”帮不上什么，却在他们进入下一轮测试时，当测试变难，威胁到对自己的自我定位“若做不出来便说明我不聪明了”这时他们便更容易放弃，他们更易被失败威胁到，他们也无法享受过程，他们变成了完美主义者，或者说更倾向于变成完美主义者，这就是固定心态，你的智商真高。而可塑心态“你真努力”我会努力做的，即便我没成功，没做好，我也照样能学习，能够更享受过程，这就是可塑心态。现在将这个理论运用到恋情上来，如果我认为拥有一段至死不渝的幸福的恋情的最关键所在寻找到真命天子，这里的寻找心态就相当于Dweck提出的固定心态，假设我现在就有这种寻找心态，认为这是最重要的事，此时若我们的恋情经历一段艰难岁月，接下来会怎样呢？我会开始思索“不对，我肯定是还未找到真命天子，我肯定弄错了，找错了对象”这种心态常会让情况恶化，可能会导致恶性循环。这就是寻找心态，因为这种心态是固定的，我找到了白马王子，我找到了自己的女神，我的皮特，我的贝瑞，问题是现实总是残酷的，我们无法脱离现实，现实证明完美的恋情根本不存在。记住Leo Buscaglia曾说过“完美的爱情少之又少”不，不是少，而是没有，当我们意识到，若我们有了寻找心态，这种固定心态，它会威胁到我们的自我认定，一有矛盾发生我们就开始琢磨“估计我还没找到真命天子”。若我们反过来抱着培养心态，这种心态是可塑的，它与我们的努力相关“好的，我们的情感碰到了困难，我们在经历困境，但不怕，因为我们在努力改善，我们在努力解决问题”这就像那些被赞扬努力的学生“好的，虽然我现在解决不了问题但又怎样呢？我在努力，我在尝试，我甚至在享受这过程。”看这类比多么相似，Dweck研究的心态和我们用在恋情上的心态。如此之重要，两种心态，结果相差甚远，很多时候我们是可以转变这心态的，不是马上可以变，但也不用太多的时间，要知道Card Dweck能靠一个几小时的实验就将人们的心态转变，我们也能在对待恋情上转变心态，只要我们真正接受并内化一个事实，那就是在一段恋情中，找到真命天子，找到合适的人当然重要，但培养一段感情更重要，这个一会再讲。但问题接踵而来，为什么人们会有寻找心态呢？如果培养心态更健康，为什么人们没有培养心态呢？主要原因之一在于电影，现在的电影很精彩，电影很棒，向我们展现一切皆有可能，亚里士多德曾对小说发表如下看法，小说远重于历史，因为历史只是白描，而小说却将一切描述到了极致。所以说电影是很美好的，它让我们看到了可能性，尤其是浪漫的电影，这里浪漫不是指爱情上的浪漫，是指18、19世纪的浪漫主义。向我们展示事物可以有多美好，潜在的人性，我们与世界的关系，这是件很美妙的事。但是电影有一点没做好，电影聚集于找到真命天子，于是这就巩固加强了寻找心态，因为大多数电影爱情故事总是这样的，有挣扎，有争吵，有意见相左，途中挑战不断，到最后Smith夫妇走到了一起，从此幸福生活，荧幕落下，他们走向夕阳。你们知道这画面有什么问题吗？问题就在于爱情才刚开始，电影就结束了，荧幕落下后才要开始真正的努力，在刚开始时，要恋情顺利是很容易的，蜜月期或者说一开始的一两年，但是这之后，当最初的肉体上，生理本能淡去，当我们开始意识到我们的伴侣并不完美时会怎样？会怎样？这就是爱情开始的时候了，这也是真爱得以培养并形成之际，我并不是贬损寻找真命天子的重要性，这当然重要，通常找到王子前要亲无数只青蛙，但是对于一份美好而持久的恋情培养更重要。这才是努力开始的地方，在日落之后，困难与险阻浮现。与寻找心态紧紧相连的是真命天子只有一个这样的观念，我所需要做的就是穷尽一生找到那个真命天子，如果得去耶鲁大学找我也会愿意去，就像是莎翁悲剧的现代版，不论需要做什么，我都愿意做，只要能找到真命天子即便我在波士顿，他们在西雅图我总会找到真命天子。我不信这套，不现实，这不是信念的问题，我的意思是，很多人觉得找到了真命天子，也许确实是找到了，却因为不幸的原因或是为了正确的原因，没能继续下去，他们之后反而找到更多爱情，这世界上有60亿人口，真命天子绝非仅一个。那么是什么让恋情独特的呢？不是找到真命天子，而是与你选择的恋人培养恋情，通过共同的努力，共同在一起，共同度过，彼此奉献，这是创造一段恋情的方式，一段独特的恋情，让两个“我”变成一个“我们”，再次重申，这不能在一夜间完成，这甚至不能在一两年里完成，需要时间。事实上感情没有完成一说，这是一个过程，它无关恋情的成功，而是恋情的延续。
+那我们来讲讲爱情吧。上节课我们留下的问题多过答案，问题是...很难的问题，“我们怎样维持爱情，怎样在热恋期后维持激情？”因为即使我们觅得自己的布拉德·皮特，或哈莉·贝瑞也不能确保激情长存，其实真正能确定的是，我们和那个人历经的生理上的兴奋会慢慢淡去，这在一定程度上解释就几个数据，**三分之二的婚姻以离婚告终**，那些即便以后没有分开也是出于省事，出于责任，而不是因为曾经在一起时的那种激情，那种在恋情一开始时存在的带着想要与之共度终生的彼此承诺与对方长相厮守的美好夙愿。
 
-恋情的培养不仅靠交换戒指，或是结婚誓言，而更要靠共同参与。这为什么很重要呢？我们讲一下心理学其他领域的研究，我在其他场合曾提过几次，Muzafer Sherif在19世纪50年代完成的伟大研究之一，在Muzafer Sherif之前，我说过了，人们有这样一个假说，当要解决人际冲突或者群体间的冲突时，人们认为此时的解决方法就是，让冲突双方聚在一起就行了，这个主流假说被称为“接触假说”让冲突双方相接触，无论是族群冲突还是个人间的冲突，让他们聚在一起，冲突就能解决，这一理论主要由Gogdon Allport提出，在19世纪30年代我们的心理学系Muzafer Sherif出现后，指出这不行，事实上，仅让冲突双方聚首，让冲突双方接触，通常反而会激化矛盾，而非解决矛盾，我讲这个事，用阿以冲突作为例子，那里的人们聚在一起，希望能实现两国间的和平交往，但反而挑起了更多的战争，仅接触是不够的，不仅不适用于国家间的冲突，不适用于族群间的冲突，也不实用于夫妻间的冲突，一段恋情中，发生冲突不可避免，这世上没有完美的恋情，即便有了完美恋情，也会有冲突的完美恋情，对此马上会为大家讲到。我们的恋情会有冲突，不是在第一年里出现就是在两三年后出现，而至于重大冲突，这里不是指类似于“你怎么不放下马桶盖”或者“把马桶盖掀起的来”的冲突，当然马桶盖冲突也会变得很严重。但我指的是其他重大冲突，这样的重大冲突出现时，一段关系中的双方只是聚在一起，互相接触，这不足以解决冲突。很多情况下，反而会由小冲突转化为大冲突，冲突逐渐升级。Sherif对此有什么建议？我们研究出什么方法了？解决冲突的要点之一在于确立一个超然目标，当两个民族或国家共同努力，彼此互助，无论在公事上还是恋情上。例如共同抚养孩子，只要共同努力，不管属于同一个政治阵营还是相对立的两个政治阵营，都可以。只要共同努力，彼此支持对方，当你们共同努力，共同参与时，才是你们可能解决冲突之时，我们很快就会看到这样的冲突，反而还能让恋情变得更加巩固。但情侣间需要共同的有意义的目标。再说一遍，可以是一起要个孩子，共同抚养，不是“我们有个孩子由父亲或母亲抚养，通常会是母亲。”这样不算是共同努力了，孩子必须处于一种微妙的位置，用专业术语来说，孩子应是合资企业。用这个语术来比喻生孩子是不是很有爱？只要他们不带来任何坏账，对他们的投资会带来很好的回报，非常适合的经济学术语，琢磨琢磨一下就往上套。共同做事，共同抚育孩子，或是共同参与竞选或在工作上给对方帮助，但要共同为之。John Gottman说过“最稳固的婚姻里，丈夫与妻子彼此间深度融合，他们不只是一起生活，他们还支持彼此的愿望与抱负，为他们的生活融入共同的目标。”这不是说他们要什么都一起做，我的意思是他或她可以在工作上有自己的目标，而他们并不一起工作，这完全没问题，但是必须要有他们共同做的事。换言之，我们需要的是主动的爱情。我第一次理解主动爱情的含义，还是通过Shaher给我讲的一个故事，他是我在以色列最好的朋友之一，我们过去是同班同学，不过他很早就结婚了，他20出头就结婚了，很快有了儿子，他是一个非常善于自省很诚实很正直的人。他告诉我，刚生儿子Noam时，当他的母亲与妻子带着Noam从医院回到家，Shahar并未感受到对Noam的爱，儿子很可爱，很招人喜欢，但他对儿子没有自己想象中那么深爱，更别提他对此有多愧疚了，幸运的是这没有持续很久，因为自从Shahar开始照顾儿子，比如为他换尿布，大半夜起来给他喂奶，带他散步，给他擦洗身体，爱就这样培养出来了，平生第一次他感到了父亲对儿子的爱。这感情不是自然而然便有的，对有些人是天生的，尤其是女性，但不是女生都是这样，总体来说高于男人。我们可以等着这感觉自然发生，也可以主动参与其中，表达我们的爱，还记得自我知觉理论吗？我们总是以自己的行为为基础形成自我的理论及信条，我们过去曾讲过的例子，如果我想象自己会去约会某人，即便她们说不，我也感到了自信，无论对方答不答应，我的自尊都会上升。若我想象自己能去演戏，我会感到自己是有勇气的，如果我感到自己，如果我照顾自己，我会感到自己是自尊自爱、关心自己或关心她的人。这对孩子也是一样的，若我想象自己能照顾孩子，根据自我知觉理论我会得出“我一定很爱那孩子”的结论，这爱会随着时间而加深，无论是对孩子还是对伴侣，爱情开始时也许是自发感受到的，也许是一见钟情，尽管如此，若我们不主动维持爱情，长此以往，由于自我知觉理论，那份最初的激情会淡去，因为我们没在恋情中有所投入，自我知觉理论会告诉我们“这恋情对我一定不怎么重要”爱情慢慢淡去，更不必提激情被时间冲刷掉的生理原因了，如果没有主动爱情，则恋情无以为继。我们怎样维持爱情？保持主动？恋情老规矩，我们谈过老规矩，我跟你们讲过我和我妻子的老规矩至少每周两次与全家共进晚餐，一般每周会有三四次。但我们确有这些老规矩，因为现代社会，若没有这些老规矩，用Steven Covey的话说是，重要却非常紧急，重要却非常紧急的活动就会被冷落。即便我们知道出去约会很重要，但不如刚接到的工作来电紧急，所以我不得不放弃约会，留下来加班。然而若有老规矩，不管遇到什么事都坚持老规矩，感情就得以维持。  
+若问“幸福心理学能为我们做什么？”这是对另一个问题的提问，另一个被问了很多年的问题。“为什么这么多恋情失败的例子？”这问题很重要，很有必要问，这个问题涵盖面远远不够吗，但这个问题犯了一个错误，**他有一个缺点，只问了消极的问题**，当我们研究问题少年，时间管理与压力时也犯了这样的错误，因为当我们只问了消极的问题时，我们就会看不到巴士上的孩子。这是一个比喻，我们就会看不到眼前真实的颜色，**如果我们仅关注一个问题“一共有多少几何形状？”问题决定现实**，**很多时候，如果我们不问某个问题，某些答案就不会出来**[思想决定现实，角度决定现实]。所以我们来问这个问题，不仅问“怎样让恋情维系下去”还要问“怎样让恋情美好下去”。如David Schnarch和John Gottman两位心理学家，在他们写的大作中，在他们的研究中，谈过这些方法特征，让我们来了解一下。  
+
+**第一个方法是努力**，努力世界上最好的秘诀，是成功的秘诀，是个人成功的秘诀，是感情成功的秘诀，成功没有捷径，若想让一段恋情一直美好，我们就得为之努力。这看起来似乎是不言而明的普遍常识，但在这个班上，我们经常体会到正如伏尔泰所说**“常识没那么寻常”**,当想用常识来维持一段恋情时，却发现这样的常识不是人人都有。**这是因为很多人对恋情有着错误的期望**，或者确切的说，对美好的恋情有着错误的期望，大多数人认为拥有一段美好的至死不渝的恋情的关键在于寻找到真命天子，这确实重要，但是**错在了将重点放在寻找上面**。我们也套用一下Carol Dweck研究中的固定心态和可塑心态的对比，**人们有一种会破坏恋情的寻找心态**，我来为大家解释一下。先回到春假前我们讲过的知识，Carol Dweck证明了当人们获得游戏测试成绩后，我们赞赏他们“你真聪明”这时他们就有了固定心态。相反，如果我们称赞他们“你真努力”他们就有了可塑心态，这两种心态都会产生影响。因为固定心态虽然赞赏“你真聪明”帮不上什么，却在他们进入下一轮测试时，当测试变难，威胁到对自己的自我定位“若做不出来便说明我不聪明了”这时他们便更容易放弃，他们更易被失败威胁到，**他们也无法享受过程**，他们变成了完美主义者，或者说更倾向于变成完美主义者，这就是固定心态，你的智商真高。而可塑心态“你真努力”，我会努力做的，即便我没成功，没做好，我也照样能学习，能够更享受过程，这就是可塑心态。现在将这个理论运用到恋情上来，如果我认为拥有一段至死不渝的幸福的恋情的最关键所在寻找到真命天子，这里的寻找心态就相当于Dweck提出的固定心态，假设我现在就有这种寻找心态，认为这是最重要的事，此时若我们的恋情经历一段艰难岁月，接下来会怎样呢？我会开始思索“不对，我肯定是还未找到真命天子，我肯定弄错了，找错了对象”这种心态常会让情况恶化，可能会导致恶性循环。这就是寻找心态，因为这种心态是固定的，我找到了白马王子，我找到了自己的女神，我的皮特，我的贝瑞，问题是现实总是残酷的，我们无法脱离现实，现实证明完美的恋情根本不存在。
+
+记住Leo Buscaglia曾说过“完美的爱情少之又少”，不，不是少，而是没有，当我们意识到，若我们有了寻找心态，这种固定心态，**它会威胁到我们的自我认定**，一有矛盾发生我们就开始琢磨“估计我还没找到真命天子”。若我们反过来抱着培养心态，这种心态是可塑的，它与我们的努力相关。“好的，我们的情感碰到了困难，我们在经历困境，但不怕，因为我们在努力改善，我们在努力解决问题”这就像那些被赞扬努力的学生“好的，虽然我现在解决不了问题但又怎样呢？**我在努力，我在尝试，我甚至在享受这过程。**”看这类比多么相似，Dweck研究的心态和我们用在恋情上的心态。如此之重要，两种心态，结果相差甚远，很多时候我们是可以转变这心态的，不是马上可以变，但也不用太多的时间，要知道Card Dweck能靠一个几小时的实验就将人们的心态转变，我们也能在对待恋情上转变心态，**只要我们真正接受并内化一个事实**，那就是在一段恋情中，找到真命天子，找到合适的人当然重要，但培养一段感情更重要，这个一会再讲。但问题接踵而来，为什么人们会有寻找心态呢？如果培养心态更健康，为什么人们没有培养心态呢？主要原因之一在于电影，现在的电影很精彩，电影很棒，向我们展现一切皆有可能，亚里士多德曾对小说发表如下看法，小说远重于历史，因为历史只是白描，而小说却将一切描述到了极致。所以说电影是很美好的，它让我们看到了可能性，尤其是浪漫的电影，这里浪漫不是指爱情上的浪漫，是指18、19世纪的浪漫主义。向我们展示事物可以有多美好，潜在的人性，我们与世界的关系，这是件很美妙的事。但是电影有一点没做好，电影聚集于找到真命天子，于是这就巩固加强了寻找心态，因为大多数电影爱情故事总是这样的，有挣扎，有争吵，有意见相左，途中挑战不断，到最后Smith夫妇走到了一起，从此幸福生活，荧幕落下，他们走向夕阳。你们知道这画面有什么问题吗？问题就在于爱情才刚开始，电影就结束了，荧幕落下后才要开始真正的努力，在刚开始时，要恋情顺利是很容易的，蜜月期或者说一开始的一两年，但是这之后，当最初的肉体上，生理本能淡去，当我们开始意识到我们的伴侣并不完美时会怎样？会怎样？这就是爱情开始的时候了，这也是真爱得以培养并形成之际，我并不是贬损寻找真命天子的重要性，这当然重要，通常找到王子前要亲无数只青蛙，但是对于一份美好而持久的恋情培养更重要。这才是努力开始的地方，在日落之后，困难与险阻浮现。与寻找心态紧紧相连的是真命天子只有一个这样的观念，我所需要做的就是穷尽一生找到那个真命天子，如果得去耶鲁大学找我也会愿意去，就像是莎翁悲剧的现代版，不论需要做什么，我都愿意做，只要能找到真命天子即便我在波士顿，他们在西雅图我总会找到真命天子。我不信这套，不现实，这不是信念的问题，我的意思是，很多人觉得找到了真命天子，也许确实是找到了，却因为不幸的原因或是为了正确的原因，没能继续下去，他们之后反而找到更多爱情，这世界上有60亿人口，真命天子绝非仅一个。那么是什么让恋情独特的呢？不是找到真命天子，而是与你选择的恋人培养恋情，通过共同的努力，共同在一起，共同度过，彼此奉献，这是创造一段恋情的方式，一段独特的恋情，让两个“我”变成一个“我们”，再次重申，这不能在一夜间完成，这甚至不能在一两年里完成，需要时间。**事实上感情没有完成一说，这是一个过程，它无关恋情的成功，而是恋情的延续**。
+
+恋情的培养不仅靠交换戒指，或是结婚誓言，而更要靠共同参与。这为什么很重要呢？我们讲一下心理学其他领域的研究，我在其他场合曾提过几次，Muzafer Sherif在19世纪50年代完成的伟大研究之一，在Muzafer Sherif之前，我说过了，人们有这样一个假说，当要解决人际冲突或者群体间的冲突时，人们认为此时的解决方法就是，让冲突双方聚在一起就行了，这个主流假说被称为“接触假说”让冲突双方相接触，无论是族群冲突还是个人间的冲突，让他们聚在一起，冲突就能解决，这一理论主要由Gogdon Allport提出，在19世纪30年代我们的心理学系Muzafer Sherif出现后，指出这不行，**事实上，仅让冲突双方聚首，让冲突双方接触，通常反而会激化矛盾，而非解决矛盾**，我讲这个事，用阿以冲突作为例子，那里的人们聚在一起，希望能实现两国间的和平交往，但反而挑起了更多的战争，仅接触是不够的，不仅不适用于国家间的冲突，不适用于族群间的冲突，也不实用于夫妻间的冲突，一段恋情中，发生冲突不可避免，这世上没有完美的恋情，即便有了完美恋情，也会有冲突的完美恋情，对此马上会为大家讲到。我们的恋情会有冲突，不是在第一年里出现就是在两三年后出现，而至于重大冲突，这里不是指类似于“你怎么不放下马桶盖”或者“把马桶盖掀起的来”的冲突，当然马桶盖冲突也会变得很严重。但我指的是其他重大冲突，这样的重大冲突出现时，一段关系中的双方只是聚在一起，互相接触，这不足以解决冲突。很多情况下，反而会由小冲突转化为大冲突，冲突逐渐升级。Sherif对此有什么建议？我们研究出什么方法了？
+
+解决冲突的要点之一**在于确立一个超然目标**，当两个民族或国家共同努力，彼此互助，无论在公事上还是恋情上。例如共同抚养孩子，只要共同努力，不管属于同一个政治阵营还是相对立的两个政治阵营，都可以。只要共同努力，彼此支持对方，当你们共同努力，共同参与时，才是你们可能解决冲突之时，我们很快就会看到这样的冲突，反而还能让恋情变得更加巩固。**但情侣间需要共同的有意义的目标。**再说一遍，可以是一起要个孩子，共同抚养，不是“我们有个孩子由父亲或母亲抚养，通常会是母亲。”这样不算是共同努力了，孩子必须处于一种微妙的位置，用专业术语来说，孩子应是合资企业。用这个语术来比喻生孩子是不是很有爱？只要他们不带来任何坏账，对他们的投资会带来很好的回报，非常适合的经济学术语，琢磨琢磨一下就往上套。共同做事，共同抚育孩子，或是共同参与竞选或在工作上给对方帮助，但要共同为之。John Gottman说过“最稳固的婚姻里，丈夫与妻子彼此间深度融合，他们不只是一起生活，他们还支持彼此的愿望与抱负，为他们的生活融入共同的目标。”这不是说他们要什么都一起做，我的意思是他或她可以在工作上有自己的目标，而他们并不一起工作，这完全没问题，但是必须要有他们共同做的事。**换言之，我们需要的是主动的爱情**。
+
+我第一次理解主动爱情的含义，还是通过Shaher给我讲的一个故事，他是我在以色列最好的朋友之一，我们过去是同班同学，不过他很早就结婚了，他20出头就结婚了，很快有了儿子，他是一个非常善于自省很诚实很正直的人。他告诉我，刚生儿子Noam时，当他的母亲与妻子带着Noam从医院回到家，Shahar并未感受到对Noam的爱，儿子很可爱，很招人喜欢，但他对儿子没有自己想象中那么深爱，更别提他对此有多愧疚了，幸运的是这没有持续很久，因为自从Shahar开始照顾儿子，比如为他换尿布，大半夜起来给他喂奶，带他散步，给他擦洗身体，爱就这样培养出来了，平生第一次他感到了父亲对儿子的爱。这感情不是自然而然便有的，对有些人是天生的，尤其是女性，但不是女生都是这样，总体来说高于男人。我们可以等着这感觉自然发生，也可以主动参与其中，表达我们的爱，还记得自我知觉理论吗？我们总是以自己的行为为基础形成自我的理论及信条，我们过去曾讲过的例子，如果我想象自己会去约会某人，即便她们说不，我也感到了自信，无论对方答不答应，我的自尊都会上升。若我想象自己能去演戏，我会感到自己是有勇气的，如果我感到自己，如果我照顾自己，我会感到自己是自尊自爱、关心自己或关心她的人。这对孩子也是一样的，若我想象自己能照顾孩子，根据自我知觉理论我会得出“我一定很爱那孩子”的结论，这爱会随着时间而加深，无论是对孩子还是对伴侣，爱情开始时也许是自发感受到的，也许是一见钟情，尽管如此，若我们不主动维持爱情，长此以往，由于自我知觉理论，那份最初的激情会淡去，因为我们没在恋情中有所投入，自我知觉理论会告诉我们“这恋情对我一定不怎么重要”爱情慢慢淡去，更不必提激情被时间冲刷掉的生理原因了，如果没有主动爱情，则恋情无以为继。我们怎样维持爱情？保持主动？恋情老规矩，我们谈过老规矩，我跟你们讲过我和我妻子的老规矩至少每周两次与全家共进晚餐，一般每周会有三四次。但我们确有这些老规矩，因为现代社会，若没有这些老规矩，用Steven Covey的话说是，重要却非常紧急，重要却非常紧急的活动就会被冷落。即便我们知道出去约会很重要，但不如刚接到的工作来电紧急，所以我不得不放弃约会，留下来加班。然而若有老规矩，不管遇到什么事都坚持老规矩，感情就得以维持。  
 第二种维持爱情重要的途径是做出改变，从想要被认可，到想要被了解。这个建议来自David Schnarch  
 出自他的书“充满激情的婚姻”，就是这个简单的建议，真正地改变了我与人们的关系，包括我与妻子的恋情，我与朋友的友情，与家人的亲情，甚至于师生情。这点在以前提过，再讲深一点，因为这对维持激情至关重要，对于维持友情，维持快乐，维持个人内心的以及人与人之间的快乐，这意味着什么呢？什么叫被了解而非被认可呢？首先，David Schnarch及其他心理学家表明了，如果我们想在蜜月期后，在一见钟情后，仍然维持着激情，我们就得形成深层次的亲密关系，那些接受我们研究调查的伴侣，他们已共同生活了几十年，却依然有着充满激情的恋情。很不幸，这样的伴侣少之又少，但确实存在，他们一生都在培养，并一直培养，而非花一生时间寻找亲密的关系，你们知道怎样培养亲密的关系吗？通过逐渐了解对方，逐渐加深了解，通过理解对方，通过像了解自己一样了解对方。这意味着，我们若决心让对方了解自己我们就必须打开心扉，我们必须吐露心声，这意味着我们得彼此分享，不只是那些在首次约会分享的精彩美妙的事，当然也包括这些，但是除此以外还包括一些让我们不怎么自豪的事，也许是我们的弱点，也许是我们耻于提及的，让我们觉得不舒服的，不为人知的事情，这些事不会在首次约会上讲出来，这也不该在首次约会讲，很多情况下，甚至不会在五年十年内讲，只有经过长年累月的信任加增，逐渐坦露出来，有时我们坦露的是自己都不知道的，被我们压抑了很久的事。但这需要时间，这也是要回到David Schnarch关于脂肪团和性能力的言论上。这通常发生在10年20年30年后，这也是为什么到了五六十岁时，甚至会有比18、20、30岁时更强的性能力。倒不是说18、20、30岁时不好，而是会比年轻时更好，为什么？因为有了更深层的亲密联系。若我们理解了充满激情的关系的本质，这段关系就有很多东西值得我们期待，这不能紧靠“我们在一起，我找到了梦中情人，我们会幸福一生”不是这样的，这有时是有风险的。意味着除了坦露我们内心深处的需求，我们最深的幻想，我们最厉害的长处，还有我们的缺点，我们的不安及痛苦。要坦露，要敞开心扉，就要做到这些，这意味着一段健康的恋情，需要我们表达自己，而非长期抑制自己。这就是被了解与被认可的区别。被了解是要表达自己，被认可则是要取悦别人。这样做是有缺点，敞开心扉表达自己风险更高，因为若她不喜欢这样的我怎么办？如果他深入了解我后，不喜欢我怎么办？但是要知道当我们表达自己时，我们更可能收获一段美好的恋情，但是没什么可以保证一定就有好恋情，这无法保证的，然而若我们一味抑制自己，失败是肯定的，原因如下，首先，当我们逐渐敞开心扉也许短时间内没有效果，但是随着时间的流逝人们会被我们吸引，特别是我的伴侣会逐渐更喜欢我，因为我们有了深层次的亲密关系，即便有时他们对于刚了解的关于我们的事不是很喜欢或赞成，但久而久之，真诚的人会吸引到其他人，而且这种方法也适用于人际关系领域，它是用于友情，适用于提高领导能力。像Peter Drucker阐述的那样，最伟大的领导不是最有魅力的，也不是最迷人的那些人，而是极其诚实正直的人，这样的领导，他的属下会长久追随他。无论是团体间的人际关系还是个人之间的私交关系，只要我们坦诚，就更可能被容纳接受。第二件事应该时刻谨记的是，如果我给人留下了一个很好的印象，使得这个人或者这群人都很喜欢我，这奏效了，我成功了，可这是真的吗？他们喜欢的是谁呢？他们喜欢的我还是那个形象，是我塑造的那个戴着面具的人吗？换言之，他们喜欢的不是真正的我，也许看起来是，但那不是真的。这喜欢是假象，换言之，我失败了，而且这种假象也维持不太久，所以说坦诚相待更可能持久，而当我们的目标是给人留下一个好印象时，这种情形持久的可能性为零，这并不是要你在第一次约会就放弃尝试给对方留下深刻印象，我是说我还没见过谁没尝试过，在首次甚至第十次约会、乃至第十次约会给对方留下深刻印象，这是可以的，然而共同生活最重要的动因是什么？就像我们前面说的那样，敞开心扉。我们还需要积极努力，去了解我们的伴侣，去了解他们爱喝的红酒，喜欢的花，他们喜欢哪里被咯吱、哪里喜欢被触碰，他们怕什么，渴望什么，什么时候该给他们一些独处的空间，什么时候该和他们沟通，什么时候该触碰他们，所有这些都需要时间，这不可能在首次约会时实现，也不会在第一年里实现，不会在头10年或30年全部实现，这意味着我们要用一生的时间去了解对方，营造一生的美好恋情。我的祖父祖母是我在感情方面的榜样，他们在一起50年后，还在继续了解对方，他们的感情很好，他们的感情还没圆满，而是正在圆满。David Schnarch说过“亲密就是让你自己被真正的了解，即使是你或你伴侣不喜欢的也要被了解，但这并不代表坦露的都是缺点，有时也会是一直没发现的优点，大部分方法都专注于你的伴侣，在你坦露时认同和接受你，但你不能寄希望于此，如果你心存这样的意图，那么你坦露心声时必然有所掣肘，因你只会说那些让你的伴侣认可的话，打破僵局需要亲密关系，这基于认可你自己。”大多数婚姻咨询师，性治疗师认为，一段恋情中最重要的，一段健康长久的恋情中最重要的是伴侣间彼此认可，这很重要。我当然想被对方认可，我当然认可我的伴侣，然而这不是健康恋情的基础，而这是很多治疗师，很多夫妻以及我曾犯过的错误。没有认识到被了解才是基础，无论是在一段恋情中还是与朋友的友情中，当你坦露心声时，你是冒着风险的，而且很多时候这会引发冲突，破坏感情。然而通常，几率不是特别高，但通常，这只是短暂的破坏。另一方面，若你长期坦诚敞开胸怀，这会引领你走向长久的感情，对恋情是有积极效果的。一方面来看，你坦诚时肯定会觉得不舒服，舒服的话也就不难了，也就不算真正的坦诚。短期来看这是很难的，但从长远看，它能助长感情，关键在于你想要什么？要短暂的舒服感觉？你被认可了，你很棒，我来让你看看我有多优秀，因为被认可的感觉很好，还是你想要一段长久而美好的友情或是恋情？这是个问题，接下来的话我几个月前就讲过，现在我想再重申一次。我是怎样改变与学生的关系的，怎样转变我的教学方式，因为最初的教学时，我的主要目标是不管讲得是否清楚明白，当时确实很清楚，但潜意识里最主要是想被认可，我真的很想让我的学生喜欢我，那是我的主要目标，慢慢的，看了很多人的著作，尤其是David Schnarch的书，还有Parker Palmer的“教学的勇气”我的目标变为了被了解，这是我现在的咒语了，每天上讲台前，我天天想着并念着我的咒语，其实这就写在我的笔记本第一页，这是我的笔记本，这些是我的笔记，我的小炒，第一行字就是“被了解”每天都是被了解而非被认可，这改变了我与学生的关系以及教学方式，原因有下。首先，老是想着“我得让给他们觉得我很厉害，无论是对于我的伴侣还是一千个学生”压力太大了，这样很难，带给我太多压力了，而若是站在这里说“我想让我的学生更了解我”就简单多了，这也意味着要了解那个我非常喜欢和关心的领域，我想要他们的了解，这让我觉得轻松。当我想被Tammy了解，而不是让她有个好印象，让她认可我时我就觉得和她在一起轻松多了，这是第一个要点。长期想取悦别人的缺点是，若我们戴着面具且不断不断地试着让自己被认可，看起来很完美，以便让学生喜欢我认可我，但这样做的同时也伤害到了学生，因为若我擅于演戏伪装，扮演一个完美老师的角色，我就变成一个很差劲的榜样，久而久之会伤害到学生，因为那个完美的我并不存在。如果有人想向这个完美的形象看起，无论是感情中还是在个人问题上，都不可避免地通往完美主义，也是通往失败与不幸。除非我是想被了解，也就是说我的缺点，我的失败之处，不管是在剑桥还是在哈佛的失败，或是我的焦虑，你们会见到真实的我，或是犯错误，你们见到的是真实的我，这样的我是一个更好老师，相较于那个完美形象更平易近人，好过那个被认可的我，除此以外，这样的我也更快乐，因为我在这里与你们分享，我在分享自己的一部分内心世界，我与大家分享的是我非常喜欢和关心的。  
 被了解而非被认可，说起容易做来难。但是利大于弊，尤其是长远看来，好处远远大于弊处。
